# TinyLLaVA_Factory

./: .gitignore  eval.sh  pyproject.toml  run.sh
scripts/eval/: textvqa.sh
scripts/train/: custom_finetune.sh  finetune.sh  pretrain.sh  train_phi.sh  train_tinyllama.sh
scripts/train/gemma/: finetune_gemma.sh  pretrain_gemma.sh
scripts/train/lora/: finetune_lora.sh  finetune_qlora.sh  finetune_tinyllama.sh  train_phi_lora.sh
scripts/train/openelm/: finetune_openelm.sh  pretrain_openelm.sh
scripts/train/qwen2/: finetune_qwen2.sh  pretrain_qwen2.sh
scripts/train/share/: finetune_share.sh  pretrain_share.sh
tinyllava/data/: __init__.py  dataset.py  get_training_data.py
tinyllava/data/template/: base.py  gemma_template.py  llama_template.py  phi_template.py  pretrain_template.py  utils_template.py
tinyllava/eval/: eval_textvqa.py  model_vqa_loader.py
tinyllava/model/: load_model.py  modeling_tinyllava.py
tinyllava/model/connector/: qformer.py
tinyllava/model/llm/: __init__.py
tinyllava/model/vision_tower/: __init__.py
tinyllava/train/: __init__.py  get_training_data.py  tinyllava_trainer.py  train.py  train_sh.py
tinyllava/training_recipe/: base.py  lora_recipe.py
tinyllava/utils/: __init__.py  logging.py  train_utils.py
